--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>
         <span class="visually-hidden">Homefield</span>
       </h1>
-
+      <img src="/img/logoS.svg" alt="logo Homefield small" class="logoS" />
       <div class="menu">
         <a href="#bio" class="bio">bio</a>
         <a href="#kontakt" class="kontakt">kontakt</a>
@@ -42,7 +42,8 @@
     <div class="logobox">
       <img src="img/hfwhite.svg" alt="Homefield Logo" class="logo" />
     </div>
-    <div class="stop"></div>
+    <div class="stop" id="bio"></div>
+    <div class="content-wrapper">
     <div class="biotext">
       <h2>Jsme Homefield s r.o.</h2>
       <p>Česká firma. Šijeme v Praze.</p>
@@ -54,6 +55,24 @@
         est iste fuga dolore eaque cupiditate ipsam reprehenderit, reiciendis,
         in laborum eveniet.
       </p>
+    </div>
+    <div class="stop" id="maloobchod"></div>
+    <div class="mobox">
+      <h2>maloobchodní nabídku navštivte zde:</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+        autem repellat perferendis rem alias tempore quod repellendus totam
+        nesciunt at, mollitia ullam dolorum sapiente, quam porro quibusdam.
+        Voluptatibus temporibus quia quas officia, vero voluptates tenetur
+        magnam vitae a beatae fugit porro. Saepe eum odit culpa tenetur
+        sapiente. Maiores temporibus similique quis amet minima aliquid vero eum
+        cupiditate reprehenderit, itaque architecto voluptatem reiciendis aut
+        quidem animi omnis laudantium iure harum enim maxime magnam ut odio?
+        Quam harum voluptatibus labore. Iste, dignissimos. Excepturi repudiandae
+        dicta, rerum labore nesciunt aut obcaecati sapiente. Iure voluptatem in
+        eum dignissimos vitae alias illum. Facilis, quaerat cum.
+      </p>
+    </div>
     </div>
     <script src="index.js"></script>
   </body>
