--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
       <div class="stop" id="maloobchod"></div>
       <div class="mobox">
         <h2>maloobchodní nabídku navštivte zde:</h2>
-        <div class="banner"></div>
+        <div class="banner">
+            <!--<img src="img/ksiltovka-desktop.png" alt="ksiltovka signature" class="ksilt-img" />-->
+           <a href="tvuj-odkaz.html" class="banner-link">
+            <img src="img/banner-desktop.jpg" alt="homefield signature" class="banner-img" />
+            </a>
+        </div>
       </div>
       <div class="stop" id="kontakt"></div>
       <div class="contact">
