--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
     <div class="logobox">
       <img src="img/hfwhite.svg" alt="Homefield Logo" class="logo" />
     </div>
-    <div class="stop" id="bio"></div>
+    <!--<div class="stop" id="bio"></div>-->
     <div class="content-wrapper">
-      <div class="biotext">
+      <div class="stop"></div>
+      <div class="eko">     
+
+      </div>
+      <div class="stop"></div>
+      <div class="styl"></div>
+      <!--<div class="biotext">
         <h2>Jsme Homefield s. r. o.</h2>
         <p>Česká firma. Šijeme v Praze.</p>
         <p>
@@ -61,17 +67,21 @@
           dolores nihil est iste fuga dolore eaque cupiditate ipsam
           reprehenderit, reiciendis, in laborum eveniet.
         </p>
-      </div>
+      </div>-->
       <div class="stop" id="maloobchod"></div>
-      <div class="mobox">
-        <h2>maloobchodní nabídku navštivte zde:</h2>
-        <div class="banner">
+      <div class="shops">
+        <div class="vobox">
+
+        </div>
+        <div class="mobox">
+          <div class="banner">
             <!--<img src="img/ksiltovka-desktop.png" alt="ksiltovka signature" class="ksilt-img" />-->
            <a href="tvuj-odkaz.html" class="banner-link">
-            <img src="img/banner-desktop.jpg" alt="homefield signature" class="banner-img" />
+            
             </a>
+          </div>
         </div>
-      </div>
+      </div>         
       <div class="stop" id="kontakt"></div>
       <div class="contact">
         <form class="forms" id="contact-form">
