--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
       <div class="stop" id="maloobchod"></div>
       <div class="shops">
         <div class="vobox">
-
+          <h2>velkoobchod</h2>
         </div>
         <div class="mobox">
+          <h2>maloobchod</h2>
           <div class="banner">
             <!--<img src="img/ksiltovka-desktop.png" alt="ksiltovka signature" class="ksilt-img" />-->
-           <a href="tvuj-odkaz.html" class="banner-link">
-            
+           <a href="tvuj-odkaz.html" class="banner-link">        
             </a>
           </div>
         </div>
