--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <img
               src="img/sipka.svg"
               alt="udržitelnost homefield výrobků"
-              class="šipka"
+              class="shipka"
             />
           </div>
 
@@ -96,7 +96,7 @@
             <img
               src="img/sipka.svg"
               alt="styl homefield výrobků"
-              class="šipka"
+              class="shipka"
             />
           </div>
           <div class="back">
