--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
         <div class="front">
           <img src="img/hfwhite.svg" alt="Homefield Logo" class="logo" />
           <div class="odkaz">
-            <p>více o nás</p>
+            <p>více o nás
+</p>
             <img src="img/sipka.svg" alt="homefield info sipka" class="sipka" />
           </div>
         </div>
         <div class="back">
-          <p>Text o naší firmě a historii...</p>
+          <h2>Homefield je český výrobce kvalitních kšiltovek pro firemní značky, eventy, promotýmy a privátní label.<h2><p>
+Sídlíme v Praze a od začátku stavíme na kombinaci evropských materiálů, moderní technologie výroby s lidskou precizností v každém detailu a čistým designem, který funguje napříč styly.
+</p>
         </div>
       </div>
     </div>
@@ -83,7 +86,10 @@
           </div>
 
           <div class="back">
-            <p>Informace o udržitelnosti našich produktů...</p>
+            <h3>Udržitelnost a obnovitelnost je jeden z hlavních směrů, kterými se Homefield vydává.</h3>
+            <p>Při výrobě využíváme co nejvyšší podíl <strong>evropských surovin</strong> — od bavlněného kepru až po viskózový brokát. Tyto materiály jsou obnovitelné, snadno dostupné a zaručují stabilní kvalitu i dodávky. Do dvou let plánujeme minimalizovat plastové části a nahrazovat je recyklovatelnými materiály.
+Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a dlouhou životnost produktu.
+</p>
           </div>
         </div>
       </div>
@@ -99,7 +105,8 @@
             />
           </div>
           <div class="back">
-            <p>Popis našeho stylu a designu...</p>
+            <h3>Styl Homefieldu je postavený na čistých liniích, moderní konstrukci a nadčasové jednoduchosti.</h3>
+            <p>Každý model navrhujeme tak, aby fungoval v běžném životě i v retailové prezentaci – bez ohledu na to, zda jde o <strong>firemní merch, eventovou edici nebo privátní kolekci pro prodej.</strong></p>
           </div>
         </div>
       </div>
