--- a/velko.html
+++ b/velko.html
@@ -47,18 +47,22 @@
     <div class="stop"></div>
     <h2 class="velkohead">Velkoobchodní nabídka</h2>
     <div class="text">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, expedita
-      voluptas, corporis incidunt tempore doloremque sed veniam suscipit
-      assumenda labore aliquid amet libero eum. Temporibus iste, aperiam dolorum
-      ullam nulla consectetur nam aut distinctio molestias illo molestiae animi!
-      Necessitatibus mollitia pariatur culpa tempora vel velit distinctio
-      adipisci accusantium, error dolore magnam ratione tempore officiis
-      voluptate maxime dicta non, expedita cum earum id fugit corrupti ipsam!
-      Quos laudantium ab eligendi ipsum officiis esse ipsam facere numquam,
-      libero explicabo blanditiis sed! Iusto fuga odit fugit tenetur provident
-      corrupti tempora incidunt vitae quas. Quaerat molestiae, at explicabo
-      saepe aperiam vitae itaque iusto illo?
+      <p>
+        Homefield je B2B partner pro firmy, značky a reklamní agentury. Dodáváme
+        malé i velké série — rychle, spolehlivě a s jasně nastaveným procesem.
+      </p>
+      <p>
+        Naše modely jsou navrženy tak, aby zaujaly i v jednoduchém provedení.
+        Čistá estetika dává prostor vaší značce, ale zároveň si drží podpis
+        Homefieldu – důraz na materiál, symetrii a dobře zpracované detaily.
+      </p>
+      <p>
+        Výsledkem je styl, který funguje napříč segmenty a umožní vám vytvořit
+        kolekci, která se neztratí — ať už je jejím cílem prodej, brand
+        awareness nebo firemní identita.
+      </p>
     </div>
+
     <div class="objednavka">
       <form class="forms" id="contact-form">
         <p>Pro objednání vyplňte:</p>
