--- a/velko.html
+++ b/velko.html
@@ -48,18 +48,26 @@
     <h2 class="velkohead">Velkoobchodní nabídka</h2>
     <div class="text">
       <p>
-        Homefield je B2B partner pro firmy, značky a reklamní agentury. Dodáváme
-        malé i velké série — rychle, spolehlivě a s jasně nastaveným procesem.
+        <span
+          >Homefield je B2B partner pro firmy, značky a reklamní agentury.
+          Dodáváme malé i velké série — rychle, spolehlivě a s jasně nastaveným
+          procesem.</span
+        >
       </p>
       <p>
-        Naše modely jsou navrženy tak, aby zaujaly i v jednoduchém provedení.
-        Čistá estetika dává prostor vaší značce, ale zároveň si drží podpis
-        Homefieldu – důraz na materiál, symetrii a dobře zpracované detaily.
+        <span
+          >Naše modely jsou navrženy tak, aby zaujaly i v jednoduchém provedení.
+          Čistá estetika dává prostor vaší značce, ale zároveň si drží podpis
+          Homefieldu – důraz na materiál, symetrii a dobře zpracované
+          detaily.</span
+        >
       </p>
       <p>
-        Výsledkem je styl, který funguje napříč segmenty a umožní vám vytvořit
-        kolekci, která se neztratí — ať už je jejím cílem prodej, brand
-        awareness nebo firemní identita.
+        <span
+          >Výsledkem je styl, který funguje napříč segmenty a umožní vám
+          vytvořit kolekci, která se neztratí — ať už je jejím cílem prodej,
+          brand awareness nebo firemní identita.</span
+        >
       </p>
     </div>
 
