--- a/velko.html
+++ b/velko.html
@@ -70,10 +70,28 @@
         >
       </p>
     </div>
+    <div class="nabidka">
+      <p>co nabízíme:</p>
+      <div class="offers">
+        <p>flexibilní výrobu a nízké minimální odběry</p>
+      </div>
+      <div class="offers"><p>možnost přípravy vzorků před výrobou</p></div>
+      <div class="offers"><p>stabilní materiály z EU</p></div>
+      <div class="offers"><p>krátké výrobní lhůty</p></div>
+      <div class="offers">
+        <p>podporu při designu a technických parametrech</p>
+      </div>
+      <div class="offers">
+        <p>výrobu pro privátní značky (private label)</p>
+      </div>
+    </div>
 
     <div class="objednavka">
       <form class="forms" id="contact-form">
-        <p>Pro objednání vyplňte:</p>
+        <p>
+          Pro konkrétní nabídku služeb nás neváhejte oslovit v kontaktním
+          formuláři:
+        </p>
         <label for="message" data-key="message">zpráva:</label>
         <textarea id="message" name="message" rows="5" required></textarea>
 
