--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
       </h1>
       <img src="img/logoS.svg" alt="logo Homefield small" class="logoS" />
       <div class="menu">
-        <a href="#bio" class="bio">bio</a>
-        <a href="#kontakt" class="kontakt">kontakt</a>
-        <a href="velko.html" class="velkoobchod">velkoobchod</a>
-        <a href="#maloobchod" class="maloobchod">maloobchod</a>
+        <a href="#bio" class="bio" data-key="nav.bio">bio</a>
+        <a href="#kontakt" class="kontakt" data-key="nav.contact">kontakt</a>
+        <a href="velko.html" class="velkoobchod" data-key="nav.wholesale">velkoobchod</a>
+        <a href="#maloobchod" class="maloobchod" data-key="nav.retail">maloobchod</a>
+        <div class="lang-switcher">
+          <button class="lang-btn" data-lang="cs">CZ</button>
+          <button class="lang-btn" data-lang="en">EN</button>
+        </div>
       </div>
 
       <div class="ham" id="ham">
@@ -41,16 +45,20 @@
     <div class="navigace small hidden" id="menu">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" href="#bio">bio</a>
+          <a class="nav-link" href="#bio" data-key="nav.bio">bio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#kontakt">kontakt</a>
+          <a class="nav-link" href="#kontakt" data-key="nav.contact">kontakt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="velko.html">velkoobchod</a>
+          <a class="nav-link" href="velko.html" data-key="nav.wholesale">velkoobchod</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#maloobchod">maloobchod</a>
+          <a class="nav-link" href="#maloobchod" data-key="nav.retail">maloobchod</a>
+        </li>
+        <li class="nav-item lang-switcher-mobile">
+          <button class="lang-btn" data-lang="cs">CZ</button>
+          <button class="lang-btn" data-lang="en">EN</button>
         </li>
       </ul>
     </div>
@@ -60,13 +68,13 @@
         <div class="front">
           <img src="img/hfwhite.svg" alt="Homefield Logo" class="logo" />
           <div class="odkaz">
-            <p>více o nás
+            <p data-key="home.moreAboutUs">více o nás
 </p>
             <img src="img/sipka.svg" alt="homefield info sipka" class="sipka" />
           </div>
         </div>
         <div class="back">
-          <h2>Homefield je český výrobce kvalitních kšiltovek pro firemní značky, eventy, promotýmy a privátní label.<h2><p>
+          <h2 data-key="home.companyBio">Homefield je český výrobce kvalitních kšiltovek pro firemní značky, eventy, promotýmy a privátní label.<h2><p data-key="home.companyDetails">
 Sídlíme v Praze a od začátku stavíme na kombinaci evropských materiálů, moderní technologie výroby s lidskou precizností v každém detailu a čistým designem, který funguje napříč styly.
 </p>
         </div>
@@ -77,7 +85,7 @@ Sídlíme v Praze a od začátku stavíme na kombinaci evropských materiálů, 
       <div class="eko-wrapper">
         <div class="eko">
           <div class="front">
-            <h2>udržitelnost</h2>
+            <h2 data-key="home.sustainabilityHeading">udržitelnost</h2>
             <img
               src="img/sipka.svg"
               alt="udržitelnost homefield výrobků"
@@ -86,8 +94,8 @@ Sídlíme v Praze a od začátku stavíme na kombinaci evropských materiálů, 
           </div>
 
           <div class="back">
-            <h3>Udržitelnost a obnovitelnost je jeden z hlavních směrů, kterými se Homefield vydává.</h3>
-            <p>Při výrobě využíváme co nejvyšší podíl <strong>evropských surovin</strong> — od bavlněného kepru až po viskózový brokát. Tyto materiály jsou obnovitelné, snadno dostupné a zaručují stabilní kvalitu i dodávky. Do dvou let plánujeme minimalizovat plastové části a nahrazovat je recyklovatelnými materiály.
+            <h3 data-key="home.sustainabilityIntro">Udržitelnost a obnovitelnost je jeden z hlavních směrů, kterými se Homefield vydává.</h3>
+            <p data-key="home.sustainabilityMaterials">Při výrobě využíváme co nejvyšší podíl <strong>evropských surovin</strong> — od bavlněného kepru až po viskózový brokát. Tyto materiály jsou obnovitelné, snadno dostupné a zaručují stabilní kvalitu i dodávky. Do dvou let plánujeme minimalizovat plastové části a nahrazovat je recyklovatelnými materiály.
 Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a dlouhou životnost produktu.
 </p>
           </div>
@@ -97,7 +105,7 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
       <div class="styl-wrapper">
         <div class="styl">
           <div class="front">
-            <h2>styl</h2>
+            <h2 data-key="home.styleHeading">styl</h2>
             <img
               src="img/sipka.svg"
               alt="styl homefield výrobků"
@@ -105,8 +113,8 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
             />
           </div>
           <div class="back">
-            <h3>Styl Homefieldu je postavený na čistých liniích, moderní konstrukci a nadčasové jednoduchosti.</h3>
-            <p>Každý model navrhujeme tak, aby fungoval v běžném životě i v retailové prezentaci – bez ohledu na to, zda jde o <strong>firemní merch, eventovou edici nebo privátní kolekci pro prodej.</strong></p>
+            <h3 data-key="home.styleIntro">Styl Homefieldu je postavený na čistých liniích, moderní konstrukci a nadčasové jednoduchosti.</h3>
+            <p data-key="home.styleDetails">Každý model navrhujeme tak, aby fungoval v běžném životě i v retailové prezentaci – bez ohledu na to, zda jde o <strong>firemní merch, eventovou edici nebo privátní kolekci pro prodej.</strong></p>
           </div>
         </div>
       </div>
@@ -115,11 +123,11 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
       <div class="shops">
         <a href="velko.html" class="vobox-link">
           <div class="vobox">
-            <h2>velkoobchod</h2>
+            <h2 data-key="home.wholesale">velkoobchod</h2>
           </div>
         </a>
         <div class="mobox">
-          <h2>maloobchod</h2>
+          <h2 data-key="home.retail">maloobchod</h2>
           <div class="banner">
             <!--<img src="img/ksiltovka-desktop.png" alt="ksiltovka signature" class="ksilt-img" />-->
             <a href="tvuj-odkaz.html" class="banner-link"> </a>
@@ -130,17 +138,17 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
       <div class="stop" id="kontakt"></div>
       <div class="contact">
         <form class="forms" id="contact-form">
-          <p>V případě jakýchkoliv dotazů nás neváhejte kontaktovat:</p>
-          <label for="message" data-key="message">zpráva:</label>
+          <p data-key="contact.intro">V případě jakýchkoliv dotazů nás neváhejte kontaktovat:</p>
+          <label for="message" data-key="contact.message">zpráva:</label>
           <textarea id="message" name="message" rows="5" required></textarea>
 
-          <label for="name" data-key="name">Vaše jméno:</label>
+          <label for="name" data-key="contact.name">Vaše jméno:</label>
           <input type="text" id="name" name="name" required />
 
-          <label for="email" data-key="email">Váš e-mail:</label>
+          <label for="email" data-key="contact.email">Váš e-mail:</label>
           <input type="email" id="email" name="reply_to" required />
 
-          <label for="phoneNumber">Vaše telefonní číslo:</label>
+          <label for="phoneNumber" data-key="contact.phone">Vaše telefonní číslo:</label>
           <input
             type="tel"
             id="phoneNumber"
@@ -157,13 +165,13 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
             style="display: none"
           />
 
-          <!-- Google reCAPTCHA 
+          <!-- Google reCAPTCHA
           <div class="g-recaptcha" data-sitekey="6LflQfUqAAAAAHuzyq7V4_oIHP8KkLWQZyZRMY_o"></div>
           -->
-          <button type="submit" data-key="send">odeslat</button>
+          <button type="submit" data-key="contact.send">odeslat</button>
         </form>
         <div class="all">
-          <p data-key="follow">
+          <p data-key="contact.followUs">
             Najdete nás na dalších kontaktech a sociálních sítích:
           </p>
           <a href="tel:+420730605875">
@@ -212,10 +220,11 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
       </div>
     </div>
     <div class="footer">
-      <p>© 2025 Homefield s r.o. Všechna práva vyhrazena.</p>
-      <p>vytvořeno www.imfejm.cz</p>
+      <p data-key="footer.copyright">© 2025 Homefield s r.o. Všechna práva vyhrazena.</p>
+      <p data-key="footer.createdBy">vytvořeno www.imfejm.cz</p>
     </div>
 
+    <script src="i18n.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
