--- a/velko.html
+++ b/velko.html
@@ -19,9 +19,13 @@
       </h1>
       <img src="img/logoS.svg" alt="logo Homefield small" class="logoS" />
       <div class="menu">
-        <a href="index.html#bio" class="bio">bio</a>
-        <a href="index.html#kontakt" class="kontakt">kontakt</a>
-        <a href="index.html#maloobchod" class="maloobchod">maloobchod</a>
+        <a href="index.html#bio" class="bio" data-key="nav.bio">bio</a>
+        <a href="index.html#kontakt" class="kontakt" data-key="nav.contact">kontakt</a>
+        <a href="index.html#maloobchod" class="maloobchod" data-key="nav.retail">maloobchod</a>
+        <div class="lang-switcher">
+          <button class="lang-btn" data-lang="cs">CZ</button>
+          <button class="lang-btn" data-lang="en">EN</button>
+        </div>
       </div>
 
       <div class="ham" id="ham">
@@ -34,28 +38,32 @@
     <div class="navigace small hidden" id="menu">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html#bio">bio</a>
+          <a class="nav-link" href="index.html#bio" data-key="nav.bio">bio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#kontakt">kontakt</a>
+          <a class="nav-link" href="index.html#kontakt" data-key="nav.contact">kontakt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#maloobchod">maloobchod</a>
+          <a class="nav-link" href="index.html#maloobchod" data-key="nav.retail">maloobchod</a>
+        </li>
+        <li class="nav-item lang-switcher-mobile">
+          <button class="lang-btn" data-lang="cs">CZ</button>
+          <button class="lang-btn" data-lang="en">EN</button>
         </li>
       </ul>
     </div>
     <div class="stop"></div>
-    <h2 class="velkohead">Velkoobchodní nabídka</h2>
+    <h2 class="velkohead" data-key="velko.heading">Velkoobchodní nabídka</h2>
     <div class="text">
       <p>
-        <span
+        <span data-key="velko.intro"
           >Homefield je B2B partner pro firmy, značky a reklamní agentury.
           Dodáváme malé i velké série — rychle, spolehlivě a s jasně nastaveným
           procesem.</span
         >
       </p>
       <p>
-        <span
+        <span data-key="velko.designText"
           >Naše modely jsou navrženy tak, aby zaujaly i v jednoduchém provedení.
           Čistá estetika dává prostor vaší značce, ale zároveň si drží podpis
           Homefieldu – důraz na materiál, symetrii a dobře zpracované
@@ -63,7 +71,7 @@
         >
       </p>
       <p>
-        <span
+        <span data-key="velko.resultText"
           >Výsledkem je styl, který funguje napříč segmenty a umožní vám
           vytvořit kolekci, která se neztratí — ať už je jejím cílem prodej,
           brand awareness nebo firemní identita.</span
@@ -71,37 +79,37 @@
       </p>
     </div>
     <div class="nabidka">
-      <p>co nabízíme:</p>
+      <p data-key="velko.offerHeading">co nabízíme:</p>
       <div class="offers">
-        <p>flexibilní výrobu a nízké minimální odběry</p>
+        <p data-key="velko.offer1">flexibilní výrobu a nízké minimální odběry</p>
       </div>
-      <div class="offers"><p>možnost přípravy vzorků před výrobou</p></div>
-      <div class="offers"><p>stabilní materiály z EU</p></div>
-      <div class="offers"><p>krátké výrobní lhůty</p></div>
+      <div class="offers"><p data-key="velko.offer2">možnost přípravy vzorků před výrobou</p></div>
+      <div class="offers"><p data-key="velko.offer3">stabilní materiály z EU</p></div>
+      <div class="offers"><p data-key="velko.offer4">krátké výrobní lhůty</p></div>
       <div class="offers">
-        <p>podporu při designu a technických parametrech</p>
+        <p data-key="velko.offer5">podporu při designu a technických parametrech</p>
       </div>
       <div class="offers">
-        <p>výrobu pro privátní značky (private label)</p>
+        <p data-key="velko.offer6">výrobu pro privátní značky (private label)</p>
       </div>
     </div>
 
     <div class="objednavka">
       <form class="forms" id="contact-form">
-        <p>
+        <p data-key="velko.contactIntro">
           Pro konkrétní nabídku služeb nás neváhejte oslovit v kontaktním
           formuláři:
         </p>
-        <label for="message" data-key="message">zpráva:</label>
+        <label for="message" data-key="contact.message">zpráva:</label>
         <textarea id="message" name="message" rows="5" required></textarea>
 
-        <label for="name" data-key="name">Vaše jméno:</label>
+        <label for="name" data-key="contact.name">Vaše jméno:</label>
         <input type="text" id="name" name="name" required />
 
-        <label for="email" data-key="email">Váš e-mail:</label>
+        <label for="email" data-key="contact.email">Váš e-mail:</label>
         <input type="email" id="email" name="reply_to" required />
 
-        <label for="phoneNumber">Vaše telefonní číslo:</label>
+        <label for="phoneNumber" data-key="contact.phone">Vaše telefonní číslo:</label>
         <input
           type="tel"
           id="phoneNumber"
@@ -118,12 +126,13 @@
           style="display: none"
         />
 
-        <!-- Google reCAPTCHA 
+        <!-- Google reCAPTCHA
           <div class="g-recaptcha" data-sitekey="6LflQfUqAAAAAHuzyq7V4_oIHP8KkLWQZyZRMY_o"></div>
           -->
-        <button type="submit" data-key="send">odeslat</button>
+        <button type="submit" data-key="contact.send">odeslat</button>
       </form>
     </div>
+    <script src="i18n.js"></script>
     <script src="velko.js"></script>
   </body>
 </html>
