--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
       <div class="menu">
         <a href="#bio" class="bio" data-key="nav.bio">bio</a>
         <a href="#kontakt" class="kontakt" data-key="nav.contact">kontakt</a>
-        <a href="velko.html" class="velkoobchod" data-key="nav.wholesale">velkoobchod</a>
-        <a href="#maloobchod" class="maloobchod" data-key="nav.retail">maloobchod</a>
+        <a href="velko.html" class="velkoobchod" data-key="nav.wholesale"
+          >velkoobchod</a
+        >
+        <a href="#maloobchod" class="maloobchod" data-key="nav.retail"
+          >maloobchod</a
+        >
         <div class="lang-switcher">
           <button class="lang-btn" data-lang="cs">CZ</button>
           <button class="lang-btn" data-lang="en">EN</button>
@@ -51,10 +55,14 @@
           <a class="nav-link" href="#kontakt" data-key="nav.contact">kontakt</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="velko.html" data-key="nav.wholesale">velkoobchod</a>
+          <a class="nav-link" href="velko.html" data-key="nav.wholesale"
+            >velkoobchod</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#maloobchod" data-key="nav.retail">maloobchod</a>
+          <a class="nav-link" href="#maloobchod" data-key="nav.retail"
+            >maloobchod</a
+          >
         </li>
         <li class="nav-item lang-switcher-mobile">
           <button class="lang-btn" data-lang="cs">CZ</button>
@@ -68,15 +76,20 @@
         <div class="front">
           <img src="img/hfwhite.svg" alt="Homefield Logo" class="logo" />
           <div class="odkaz">
-            <p data-key="home.moreAboutUs">více o nás
-</p>
+            <p data-key="home.moreAboutUs">více o nás</p>
             <img src="img/sipka.svg" alt="homefield info sipka" class="sipka" />
           </div>
         </div>
         <div class="back">
-          <h2 data-key="home.companyBio">Homefield je český výrobce kvalitních kšiltovek pro firemní značky, eventy, promotýmy a privátní label.<h2><p data-key="home.companyDetails">
-Sídlíme v Praze a od začátku stavíme na kombinaci evropských materiálů, moderní technologie výroby s lidskou precizností v každém detailu a čistým designem, který funguje napříč styly.
-</p>
+          <h2 data-key="home.companyBio">
+            Homefield je český výrobce kvalitních kšiltovek pro firemní značky,
+            eventy, promotýmy a privátní label.
+          </h2>
+          <p data-key="home.companyDetails">
+            Sídlíme v Praze a od začátku stavíme na kombinaci evropských
+            materiálů, moderní technologie výroby s lidskou precizností v každém
+            detailu a čistým designem, který funguje napříč styly.
+          </p>
         </div>
       </div>
     </div>
@@ -94,10 +107,19 @@ Sídlíme v Praze a od začátku stavíme na kombinaci evropských materiálů, 
           </div>
 
           <div class="back">
-            <h3 data-key="home.sustainabilityIntro">Udržitelnost a obnovitelnost je jeden z hlavních směrů, kterými se Homefield vydává.</h3>
-            <p data-key="home.sustainabilityMaterials">Při výrobě využíváme co nejvyšší podíl <strong>evropských surovin</strong> — od bavlněného kepru až po viskózový brokát. Tyto materiály jsou obnovitelné, snadno dostupné a zaručují stabilní kvalitu i dodávky. Do dvou let plánujeme minimalizovat plastové části a nahrazovat je recyklovatelnými materiály.
-Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a dlouhou životnost produktu.
-</p>
+            <h3 data-key="home.sustainabilityIntro">
+              Udržitelnost a obnovitelnost je jeden z hlavních směrů, kterými se
+              Homefield vydává.
+            </h3>
+            <p data-key="home.sustainabilityMaterials">
+              Při výrobě využíváme co nejvyšší podíl
+              <strong>evropských surovin</strong> — od bavlněného kepru až po
+              viskózový brokát. Tyto materiály jsou obnovitelné, snadno dostupné
+              a zaručují stabilní kvalitu i dodávky. Do dvou let plánujeme
+              minimalizovat plastové části a nahrazovat je recyklovatelnými
+              materiály. Upřednostňujeme <strong>krátké dopravní trasy</strong>,
+              minimální odpad a dlouhou životnost produktu.
+            </p>
           </div>
         </div>
       </div>
@@ -113,8 +135,18 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
             />
           </div>
           <div class="back">
-            <h3 data-key="home.styleIntro">Styl Homefieldu je postavený na čistých liniích, moderní konstrukci a nadčasové jednoduchosti.</h3>
-            <p data-key="home.styleDetails">Každý model navrhujeme tak, aby fungoval v běžném životě i v retailové prezentaci – bez ohledu na to, zda jde o <strong>firemní merch, eventovou edici nebo privátní kolekci pro prodej.</strong></p>
+            <h3 data-key="home.styleIntro">
+              Styl Homefieldu je postavený na čistých liniích, moderní
+              konstrukci a nadčasové jednoduchosti.
+            </h3>
+            <p data-key="home.styleDetails">
+              Každý model navrhujeme tak, aby fungoval v běžném životě i v
+              retailové prezentaci – bez ohledu na to, zda jde o
+              <strong
+                >firemní merch, eventovou edici nebo privátní kolekci pro
+                prodej.</strong
+              >
+            </p>
           </div>
         </div>
       </div>
@@ -138,7 +170,9 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
       <div class="stop" id="kontakt"></div>
       <div class="contact">
         <form class="forms" id="contact-form">
-          <p data-key="contact.intro">V případě jakýchkoliv dotazů nás neváhejte kontaktovat:</p>
+          <p data-key="contact.intro">
+            V případě jakýchkoliv dotazů nás neváhejte kontaktovat:
+          </p>
           <label for="message" data-key="contact.message">zpráva:</label>
           <textarea id="message" name="message" rows="5" required></textarea>
 
@@ -148,7 +182,9 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
           <label for="email" data-key="contact.email">Váš e-mail:</label>
           <input type="email" id="email" name="reply_to" required />
 
-          <label for="phoneNumber" data-key="contact.phone">Vaše telefonní číslo:</label>
+          <label for="phoneNumber" data-key="contact.phone"
+            >Vaše telefonní číslo:</label
+          >
           <input
             type="tel"
             id="phoneNumber"
@@ -220,7 +256,9 @@ Upřednostňujeme <strong>krátké dopravní trasy</strong>, minimální odpad a
       </div>
     </div>
     <div class="footer">
-      <p data-key="footer.copyright">© 2025 Homefield s r.o. Všechna práva vyhrazena.</p>
+      <p data-key="footer.copyright">
+        © 2025 Homefield s r.o. Všechna práva vyhrazena.
+      </p>
       <p data-key="footer.createdBy">vytvořeno www.imfejm.cz</p>
     </div>
 
