--- a/velko.html
+++ b/velko.html
@@ -20,8 +20,12 @@
       <img src="img/logoS.svg" alt="logo Homefield small" class="logoS" />
       <div class="menu">
         <a href="index.html#bio" class="bio" data-key="nav.bio">bio</a>
-        <a href="index.html#kontakt" class="kontakt" data-key="nav.contact">kontakt</a>
-        <a href="index.html#maloobchod" class="maloobchod" data-key="nav.retail">maloobchod</a>
+        <a href="index.html#kontakt" class="kontakt" data-key="nav.contact"
+          >kontakt</a
+        >
+        <a href="index.html#maloobchod" class="maloobchod" data-key="nav.retail"
+          >maloobchod</a
+        >
         <div class="lang-switcher">
           <button class="lang-btn" data-lang="cs">CZ</button>
           <button class="lang-btn" data-lang="en">EN</button>
@@ -41,10 +45,14 @@
           <a class="nav-link" href="index.html#bio" data-key="nav.bio">bio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#kontakt" data-key="nav.contact">kontakt</a>
+          <a class="nav-link" href="index.html#kontakt" data-key="nav.contact"
+            >kontakt</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html#maloobchod" data-key="nav.retail">maloobchod</a>
+          <a class="nav-link" href="index.html#maloobchod" data-key="nav.retail"
+            >maloobchod</a
+          >
         </li>
         <li class="nav-item lang-switcher-mobile">
           <button class="lang-btn" data-lang="cs">CZ</button>
@@ -56,41 +64,46 @@
     <h2 class="velkohead" data-key="velko.heading">Velkoobchodní nabídka</h2>
     <div class="text">
       <p>
-        <span data-key="velko.intro"
-          >Homefield je B2B partner pro firmy, značky a reklamní agentury.
-          Dodáváme malé i velké série — rychle, spolehlivě a s jasně nastaveným
-          procesem.</span
-        >
+        <span data-key="velko.intro"></span>
       </p>
       <p>
-        <span data-key="velko.designText"
-          >Naše modely jsou navrženy tak, aby zaujaly i v jednoduchém provedení.
-          Čistá estetika dává prostor vaší značce, ale zároveň si drží podpis
-          Homefieldu – důraz na materiál, symetrii a dobře zpracované
-          detaily.</span
-        >
+        <span data-key="velko.designText"></span>
       </p>
       <p>
-        <span data-key="velko.resultText"
-          >Výsledkem je styl, který funguje napříč segmenty a umožní vám
-          vytvořit kolekci, která se neztratí — ať už je jejím cílem prodej,
-          brand awareness nebo firemní identita.</span
-        >
+        <span data-key="velko.resultText"></span>
       </p>
     </div>
+    <p data-key="velko.offerHeading">co nabízíme:</p>
     <div class="nabidka">
-      <p data-key="velko.offerHeading">co nabízíme:</p>
-      <div class="offers">
-        <p data-key="velko.offer1">flexibilní výrobu a nízké minimální odběry</p>
+      <div class="off1">
+        <div class="offers">
+          <p data-key="velko.offer1">
+            flexibilní výrobu a nízké minimální odběry
+            
+          </p>
+        </div>
+        <div class="offers">
+          <p data-key="velko.offer2">možnost přípravy vzorků před výrobou</p>
+        </div>
+        <div class="offers">
+          <p data-key="velko.offer3">stabilní materiály z EU</p>
+        </div>
       </div>
-      <div class="offers"><p data-key="velko.offer2">možnost přípravy vzorků před výrobou</p></div>
-      <div class="offers"><p data-key="velko.offer3">stabilní materiály z EU</p></div>
-      <div class="offers"><p data-key="velko.offer4">krátké výrobní lhůty</p></div>
-      <div class="offers">
-        <p data-key="velko.offer5">podporu při designu a technických parametrech</p>
-      </div>
-      <div class="offers">
-        <p data-key="velko.offer6">výrobu pro privátní značky (private label)</p>
+      <div class="off2">
+        <div class="offers">
+          <p data-key="velko.offer4">krátké výrobní lhůty</p>
+        </div>
+
+        <div class="offers">
+          <p data-key="velko.offer5">
+            podporu při designu a technických parametrech
+          </p>
+        </div>
+        <div class="offers">
+          <p data-key="velko.offer6">
+            výrobu pro privátní značky (private label)
+          </p>
+        </div>
       </div>
     </div>
 
@@ -109,7 +122,9 @@
         <label for="email" data-key="contact.email">Váš e-mail:</label>
         <input type="email" id="email" name="reply_to" required />
 
-        <label for="phoneNumber" data-key="contact.phone">Vaše telefonní číslo:</label>
+        <label for="phoneNumber" data-key="contact.phone"
+          >Vaše telefonní číslo:</label
+        >
         <input
           type="tel"
           id="phoneNumber"
