--- a/velko.html
+++ b/velko.html
@@ -147,6 +147,12 @@
         <button type="submit" data-key="contact.send">odeslat</button>
       </form>
     </div>
+    <div class="footer">
+      <p data-key="footer.copyright">
+        © 2025 Homefield s r.o. Všechna práva vyhrazena.
+      </p>
+      <p data-key="footer.createdBy">vytvořeno www.imfejm.cz</p>
+    </div>
     <script src="i18n.js"></script>
     <script src="velko.js"></script>
   </body>
