--- a/velko.html
+++ b/velko.html
@@ -79,7 +79,6 @@
         <div class="offers">
           <p data-key="velko.offer1">
             flexibilní výrobu a nízké minimální odběry
-            
           </p>
         </div>
         <div class="offers">
@@ -109,9 +108,10 @@
 
     <div class="objednavka">
       <form class="forms" id="contact-form">
-        <p data-key="velko.contactIntro">
+        <p data-key="velko.contactIntro" class="formsText">
           Pro konkrétní nabídku služeb nás neváhejte oslovit v kontaktním
-          formuláři:
+          formuláři. Rádi pro vás připravíme individuální návrh řešení i
+          orientační kalkulaci.
         </p>
         <label for="message" data-key="contact.message">zpráva:</label>
         <textarea id="message" name="message" rows="5" required></textarea>
