--- a/velko.html
+++ b/velko.html
@@ -108,43 +108,47 @@
 
     <div class="objednavka">
       <form class="forms" id="contact-form">
-        <p data-key="velko.contactIntro" class="formsText">
-          Pro konkrétní nabídku služeb nás neváhejte oslovit v kontaktním
-          formuláři. Rádi pro vás připravíme individuální návrh řešení i
-          orientační kalkulaci.
-        </p>
-        <label for="message" data-key="contact.message">zpráva:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
+        <div class="formLeft">
+          <p data-key="velko.contactIntro" class="formsText">
+            Pro konkrétní nabídku služeb nás neváhejte oslovit v kontaktním
+            formuláři. Rádi pro Vás připravíme individuální návrh řešení i
+            orientační kalkulaci.
+          </p>
+        </div>
+        <div class="formRight">
+          <label for="message" data-key="contact.message">zpráva:</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
 
-        <label for="name" data-key="contact.name">Vaše jméno:</label>
-        <input type="text" id="name" name="name" required />
+          <label for="name" data-key="contact.name">Vaše jméno:</label>
+          <input type="text" id="name" name="name" required />
 
-        <label for="email" data-key="contact.email">Váš e-mail:</label>
-        <input type="email" id="email" name="reply_to" required />
+          <label for="email" data-key="contact.email">Váš e-mail:</label>
+          <input type="email" id="email" name="reply_to" required />
 
-        <label for="phoneNumber" data-key="contact.phone"
-          >Vaše telefonní číslo:</label
-        >
-        <input
-          type="tel"
-          id="phoneNumber"
-          name="phoneNumber"
-          pattern="[+0-9]{9,15}"
-          required
-        />
+          <label for="phoneNumber" data-key="contact.phone"
+            >Vaše telefonní číslo:</label
+          >
+          <input
+            type="tel"
+            id="phoneNumber"
+            name="phoneNumber"
+            pattern="[+0-9]{9,15}"
+            required
+          />
 
-        <!-- Honeypot input (skrytý, roboti ho vyplní) -->
-        <input
-          type="text"
-          id="honeypot"
-          name="honeypot"
-          style="display: none"
-        />
+          <!-- Honeypot input (skrytý, roboti ho vyplní) -->
+          <input
+            type="text"
+            id="honeypot"
+            name="honeypot"
+            style="display: none"
+          />
 
-        <!-- Google reCAPTCHA
+          <!-- Google reCAPTCHA
           <div class="g-recaptcha" data-sitekey="6LflQfUqAAAAAHuzyq7V4_oIHP8KkLWQZyZRMY_o"></div>
           -->
-        <button type="submit" data-key="contact.send">odeslat</button>
+          <button type="submit" data-key="contact.send">odeslat</button>
+        </div>
       </form>
     </div>
     <div class="footer">
