vobox mobox text

--- a/index.html
+++ b/index.html
@@ -156,13 +156,16 @@
         <a href="velko.html" class="vobox-link">
           <div class="vobox">
             <h2 data-key="home.wholesale">velkoobchod</h2>
+            <h4>Homefield jako B2B partner</h4>
+            <p>zjistěte více o spolupráci</p>
           </div>
         </a>
         <div class="mobox">
           <h2 data-key="home.retail">maloobchod</h2>
           <div class="banner">
-            <!--<img src="img/ksiltovka-desktop.png" alt="ksiltovka signature" class="ksilt-img" />-->
             <a href="tvuj-odkaz.html" class="banner-link"> </a>
+            <h4>Signature kolekce</h4>
+            <p>navštivte e-shop</p>
           </div>
         </div>
       </div>
