--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <link rel="icon" href="/img/favicon/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/img/favicon/favicon-32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/img/favicon/favicon-16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/img/favicon/apple-touch-icon.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
     <title>HOMEFIELD</title>
   </head>
   <body>
@@ -98,7 +117,6 @@
       <div class="eko-wrapper">
         <div class="eko">
           <div class="front">
-           
             <h2 data-key="home.sustainabilityHeading">udržitelnost</h2>
             <img
               src="img/sipka.svg"
@@ -157,16 +175,16 @@
         <a href="velko.html" class="vobox-link">
           <div class="vobox">
             <h2 data-key="home.wholesale">velkoobchod</h2>
-            <h4>Homefield jako B2B partner</h4>
-            <p>zjistěte více o spolupráci</p>
+            <h4 data-key="home.wholesaleSubtitle">Homefield jako B2B partner</h4>
+            <p data-key="home.wholesaleLink">zjistěte více o spolupráci</p>
           </div>
         </a>
         <div class="mobox">
           <h2 data-key="home.retail">maloobchod</h2>
           <div class="banner">
             <a href="tvuj-odkaz.html" class="banner-link"> </a>
-            <h4>Signature kolekce</h4>
-            <p>navštivte e-shop</p>
+            <h4 data-key="home.retailSubtitle">Signature kolekce</h4>
+            <p data-key="home.retailLink">navštivte e-shop</p>
           </div>
         </div>
       </div>
