--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             />
             <p>e-mail: info@homefield.cz</p>
           </div>
-          <div class="soc">
+          <div class="soc" hidden>
             <a href="" target="_blank" rel="noopener noreferrer">
               <img
                 src="img/facebook.png"
