--- a/index.html
+++ b/index.html
@@ -283,5 +283,7 @@
 
     <script src="i18n.js"></script>
     <script src="index.js"></script>
+    script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+<script src="js/index.js" defer></script>
   </body>
 </html>
